# toki

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: ioimage.cpp  ioimage.hpp  main.cpp  ray.hpp
src/accelerator/: bvh.cpp  bvh.hpp  iterator.hpp
src/bsdf/: lambert.cpp  lambert.hpp  specularreflection.cpp  specularreflection.hpp  speculartransmission.cpp  speculartransmission.hpp
src/camera/: camera.hpp  orthographic.cpp  orthographic.hpp  perspective.cpp  perspective.hpp
src/core/: aabb.hpp  bsdf.cpp  bsdf.hpp  bxdf.cpp  bxdf.hpp  camera.hpp  fresnel.cpp  fresnel.hpp  image.cpp  image.hpp  integrator.cpp  integrator.hpp  interaction.cpp  interaction.hpp  light.cpp  light.hpp  material.hpp  parallel.cpp  parallel.hpp  random.cpp  random.hpp  ray.hpp  region.hpp  sampler.hpp  scatter.cpp  scattering.cpp  scattering.hpp  scene.cpp  scene.hpp  shape.cpp  shape.hpp  spectrum.hpp  transform.cpp  transform.hpp
src/core/accelerator/: bvh.cpp  (+1 more)
src/image/: png.cpp  png.hpp
src/integrator/: ao.cpp  ao.hpp  path.cpp  path.hpp  whitted.cpp  whitted.hpp
src/interaction/: surfaceinteraction.hpp
src/light/: area.cpp  area.hpp  directional.cpp  directional.hpp  distant.cpp  distant.hpp  point.cpp  point.hpp
src/material/: diffuse.cpp  diffuse.hpp  lambertian.hpp  material.hpp  matte.cpp  matte.hpp  metal.hpp  mirror.cpp  mirror.hpp
src/math/: math.hpp  mathutil.hpp  matrix44.cpp  matrix44.hpp  point2.hpp  point3.hpp  quaternion.cpp  quaternion.hpp  vec2.hpp  vec3.hpp
src/primitive/: intersectable.hpp  intersectablelist.cpp  intersectablelist.hpp  sphere.cpp  sphere.hpp
src/random/: random.hpp
src/region/: primitive.cpp  primitive.hpp
src/sampler/: stratified.cpp  stratified.hpp
src/sampling/: random.cpp  random.hpp  sampling.hpp
src/scatter/: lambert.hpp  specularreflection.cpp  specularreflection.hpp  speculartransmission.cpp  speculartransmission.hpp
src/scattering/: lambert.cpp  lambert.hpp  specularreflection.cpp  specularreflection.hpp  speculartransmission.cpp  speculartransmission.hpp
src/shape/: curve.cpp  curve.hpp  curveutil.hpp  mesh.cpp  mesh.hpp  sphere.cpp  sphere.hpp  triangle.cpp  triangle.hpp
src/spectrum/: rgbspectrum.cpp  rgbspectrum.hpp
src/system/: api.cpp  api.hpp  appender.cpp  appender.hpp  bufstream.hpp  context.cpp  context.hpp  error.hpp  filestream.hpp  formatter.cpp  formatter.hpp  imageio.cpp  imageio.hpp  logger.cpp  logger.hpp  properties.cpp  properties.hpp  serializableobject.hpp  stream.hpp  system.hpp  task.cpp  task.hpp  thread.cpp  thread.hpp  toki.cpp  toki.hpp  types.hpp
src/util/: fputil.hpp  geometryutil.hpp  mathutil.hpp  samplingutil.hpp  scatteringutil.hpp
(+74 files in other folders)
